samples/_failures_safe/1761655371_1f2f42_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05500ebe.c: In function ‘main’:
./samples/SAFE/__tmp_05500ebe.c:151:12: error: missing terminating " character
  151 |     printf("\nOriginal data (%zu
      |            ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_05500ebe.c:151:5: error: expected expression at end of input
  151 |     printf("\nOriginal data (%zu
      |     ^~~~~~
./samples/SAFE/__tmp_05500ebe.c:151:5: error: expected declaration or statement at end of input
